tests/baselines/reference/implementsClauseAlreadySeen.errors.txt
==== tests/cases/compiler/implementsClauseAlreadySeen.ts (1 errors) ====
    class C {
        
    }
    class D implements C implements C {
                         ~~~~~~~~~~~~
!!! error TS1027: 'implements' clause already seen.
        baz() { }
    }